Set buttons bigger on smaller screens Fix Spotlight button for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -828,7 +828,12 @@ textarea:focus {
   .sub-txt { font-size: 28px; }
   .sub-title { font-size: 32px; }
   .img-title { font-size: 32px; }
-  .button:link { font-size: 28px; }
+  .button:link { font-size: 28px; line-height: 46px; min-height: 52px; }
+  @keyframes button-hover {
+    0%   { background-color: #6668; box-shadow: inset 0 0 #0000; }
+    60%  { background-color: #6668; }
+    100% { background-color: #0000; box-shadow: inset 0 50px #8888; }
+  }
   input { font-size: 28px; }
   textarea { font-size: 28px; }
   .doc { font-size: 28px; }
@@ -851,7 +856,7 @@ textarea:focus {
     padding-top: 16px;
     top: 543px;
     left: calc(50vw - 507px);
-    line-height: 21px;
+    line-height: 28px;
   }
 }
 @media screen and (max-width: 1299px){
